agregado algo que faltaba
si

--- a/index.html
+++ b/index.html
@@ -1,1 +1,230 @@
-h
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<title>BEE LEARNER</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="BEE LEARNER">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
+	<link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="styles/main_styles.css">
+	<link rel="stylesheet" type="text/css" href="styles/responsive.css">
+</head>
+
+<body>
+
+	<div class="super_container">
+
+		
+			<nav class="navbar navbar-expand-lg py-3 sticky-top navbar-light bg-white">
+				<a class="navbar-brand pl-0 pl-lg-5 ml-0 ml-lg-5" href="index.html">BEE<br>LEARNER</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+		
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mx-auto pr-5">
+						<li class="nav-item active">
+							<a class="nav-link" href="index.html">Home </a>  
+						</li>
+						<li class="nav-item ">
+							<a class="nav-link" href="Grammar/grammar.html">Grammar</a>
+						</li>
+						<li class="nav-item ">
+							<a class="nav-link" href="Reading/reading.html">Reading</a>
+						</li>
+						<li class="nav-item ">
+							<a class="nav-link" href="Listening/listening.html">Listening</a>
+						</li>
+						<li class="nav-item ">
+							<a class="nav-link" href="#">Writing</a>
+						</li>
+						<li class="nav-item ">
+							<a class="nav-link" href="#">Speaking</a>
+						</li>
+						
+					</ul>
+					<div class="dropdown-divider"></div>
+					<ul class="navbar-nav pr-5 mr-5">
+						<li class="nav-item">
+							<a class="nav-link" href="#">Log Out</a>  
+						</li>
+					</ul>
+		
+					<!-- <form class="form-inline my-2 my-lg-0">
+						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					</form> -->
+				</div>
+			</nav>
+		
+
+
+
+
+
+		<div class="home">
+			<div class="home_background" style="background-image: url(images/index_background.jpg);"></div>
+			<div class="home_content">
+				<div class="container">
+					<div class="row">
+						<div class="col text-center">
+
+							<h1 class="home_title">BEE LEARNER</h1>
+							<div class="home_button trans_200"><a href="#">Start Now!</a></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="space"></div>
+
+		<div class="course">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<center>
+							<div class="course_topic_t"><a href="#">To Learn</a></div>
+						</center>
+					</div>
+				</div>
+				<hr>
+
+				<div class="row course_row">
+
+					<div class="col-xl-6 col-lg-6 ">
+						<div class="course_topic">
+							<div class="course_image" style="background-image:url(images/grammar.jpg)"></div>
+							<div class="course_title_container">
+								<div class="course_topic_category">grammar - a1</div>
+								<div class="course_topic_title"><a href="Grammar/A1/grammar_a1.html">Verb To Be</a></div>
+								<div class="course_topic_text">
+									<p>The verb to be serves to join the grammatical subject of the sentence with either
+										an adjective or a
+										noun to describe or identify the subject.</p>
+								</div>
+								<div class="read_more"><a href="Grammar/A1/to_be.html">Read More <img src="images/right.png"
+											alt=""></a></div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-xl-6 col-lg-6 ">
+						<div class="course_topic">
+							<div class="course_image" style="background-image:url(images/grammar1.webp)"></div>
+							<div class="course_title_container">
+								<div class="course_topic_category">grammar - a1</div>
+								<div class="course_topic_title"><a href="Grammar/A1/this_that.html">This, That, These, Those</a>
+								</div>
+								<div class="course_topic_text">
+									<p>This, That, These, Those are called demonstratives and they are used to show
+										the relative distance between the speaker and the noun.</p>
+								</div>
+								<div class="read_more"><a href="Grammar/A1/this_that.html">Read More <img src="images/right.png"
+											alt=""></a></div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="space"></div>
+
+		<div class="course">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<center>
+							<div class="course_topic_t"><a href="#">Recent Topics</a></div>
+						</center>
+					</div>
+				</div>
+				<hr>
+
+				<div class="row course_row">
+
+					<div class="col-xl-6 col-lg-6 ">
+						<div class="course_topic">
+							<div class="course_image" style="background-image:url(images/grammar.jpg)"></div>
+							<div class="course_title_container">
+								<div class="course_topic_category">grammar - a1</div>
+								<div class="course_topic_title"><a href="Grammar/A1/to_be.html">Verb To Be</a></div>
+								<div class="course_topic_text">
+									<p>The verb to be serves to join the grammatical subject of the sentence with either
+										an adjective or a
+										noun to describe or identify the subject.</p>
+								</div>
+								<div class="read_more"><a href="Grammar/A1/to_be.html">Read More <img src="images/right.png"
+											alt=""></a></div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-xl-6 col-lg-6 ">
+						<div class="course_topic">
+							<div class="course_image" style="background-image:url(images/grammar1.webp)"></div>
+							<div class="course_title_container">
+								<div class="course_topic_category">grammar - a1</div>
+								<div class="course_topic_title"><a href="Grammar/A1/this_that.html">This, That, These, Those</a>
+								</div>
+								<div class="course_topic_text">
+									<p>This, That, These, Those are called demonstratives and they are used to show
+										the relative distance between the speaker and the noun.</p>
+								</div>
+								<div class="read_more"><a href="Grammar/A1/this_that.html">Read More <img src="images/right.png"
+											alt=""></a></div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
+
+		<div class="space"></div>
+
+		<footer class="footer">
+			<div class="footer_body">
+				<div class="container">
+					<div class="row">
+
+						<div class="col-lg-3 footer_col">
+							<div class="newsletter_container d-flex flex-column align-items-start justify-content-end">
+								<div class="footer_logo mb-auto"><a href="#">BEE LEARNER</a></div>
+							</div>
+						</div>
+
+
+
+						<div class="col-lg-9 footer_col">
+							<div>
+								<div class="footer_title">Help & Support</div>
+								<ul class="footer_list">
+									<li><a href="#">E-mail</a></li>
+									<li><a href="#">bislearning4@gmail.com</a></li>
+
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+	</div>
+
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="styles/bootstrap4/popper.js"></script>
+    <script src="styles/bootstrap4/bootstrap.min.js"></script>
+	<script src="plugins/easing/easing.js"></script>
+
+</body>
+
+</html>
